# trade_rl

./: .ci-reward-v2-concise-trigger  .ci-reward-v2-trigger  .dockerignore  .env.example  .gitignore  .importlinter  Dockerfile.training  PROJECT.md  README.ja.md  README.md  RENAMED.md  START.md  architecture-fix-source-run-id.txt  architecture-fix-source.b64  architecture-fix-source.part-000  architecture-fix-source.part-001  architecture-fix-source.part-002  architecture-fix-source.part-003  architecture-fix-source.part-004  architecture-fix-source.part-005  architecture-fix-source.part-006  architecture-fix-source.part-007  architecture-fix-source.part-008  architecture-fix-source.part-009  architecture-fix-source.part-010  architecture-fix-source.part-011  architecture-fix-source.part-012  architecture-fix-source.part-013  architecture-fix-source.sha256  architecture-hardening-trigger.txt  architecture-hardening.part-00  architecture-hardening.part-01  architecture-hardening.part-02  architecture-hardening.part-03  architecture-hardening.part-03.hex-00  architecture-hardening.part-03.hex-01-folded  architecture-hardening.part-03.hex-02-folded  architecture-hardening.part-03.hex-03-folded  architecture-hardening.part-04  architecture-hardening.tail-00  (+19 more)
.final-patch/: 00.b64  01.b64  02.b64  03.b64  04.b64  05.b64  06.b64  07.b64  08.b64  09.b64  10.b64  11.b64  12.b64  13.b64  14.b64
.github/: check_critical_coverage.py  check_workflow_security.py  ci-rerun-marker.txt  cleanup-direct-maintained-exports-trigger  direct-export-green-trigger  environment-construction-baseline-trigger  environment-construction-final-trigger  environment-construction-trigger  environment-contract-patch-trigger  environment-format-fix-trigger  environment-indent-fix-trigger  environment-initial-state-implementation-trigger  export-current-main-source-trigger  export-pr122-source-trigger  p0-ledger.patch  policy-schedule-red-trigger  policy-schedule-sync-marker  policy-schedule-sync-marker-2  policy-schedule-sync-marker-3  policy-schedule-sync-marker-6  policy-schedule-sync-marker-7  portfolio-risk-contract-implementation-trigger  portfolio-risk-contract-pytest-diagnostic.txt  pr121-apply-trigger  pr152-reward-execution-trigger  pr165-finalizer-sync-marker  provider-contract-implementation-trigger  provider-contract-import-fix-trigger  remediation-postfix-2.py  remediation-postfix-3.py  remediation-postfix.py  restore-stress-peak-pr126-trigger  runtime-services-fix-diagnostic.txt  runtime-services-implementation-trigger  runtime-services-pytest-diagnostic.txt  source-export-trigger  stateful-execution-baseline-trigger  studio-runtime.patch.gz.b64.part-00  studio-runtime.patch.gz.b64.part-01  studio-runtime.patch.gz.b64.part-02  (+11 more)
.sequence-payload/: 02.b64  03.b64  04.b64  05.b64  06.b64  07.b64  08.b64  09.b64  10_00.b64  10_01.b64  10_02.b64  10_03.b64  11_00.b64  11_01.b64  11_02.b64  11_03.b64  12_00.b64  12_01.b64
.verification/: retry-complete-remediation-2.txt  retry-complete-remediation-3.txt
config/: release-risk.example.json
docs/: ARCHITECTURE.md  BASELINE_RESIDUAL_RL.md  BINANCE.md  DECISIONS.md  DOCUMENTATION_AUDIT_CHECKLIST.md  MODEL_LIFECYCLE.md  MULTITIMEFRAME_RESEARCH.md  OPERATIONS.md  PRODUCTION_READINESS.md  PROFIT_DESIGN.md  README.md  RESEARCH_HISTORY.md  RESEARCH_STATUS.md  SECURITY.md  TESTING.md  critical-test-output.txt  data_collection.md  deployment_evidence.md  model_decision_log.md  runbook_compliance.md  runbook_incident_response.md  runbook_model_rollback.md  task4-verification-marker-2.md  task4-verification-marker-3.md  task4-verification-marker.md  task4-verification-trigger.md
frontend/: .env.example  README.md
legacy_tests/: test_data.py  test_ensemble.py  test_env.py  test_multi_tf_data.py  test_multi_tf_env.py
mars_lite/: __init__.py  config.py
scripts/: _materialize_m7_clean.py  _temp_patch_m7_pr.py  apply_architecture_followup_bootstrap.py  apply_complete_architecture_hardening.py  apply_evaluator_gate_patch.py  apply_frontend_telemetry_generation.py  apply_frontend_telemetry_generation_v2.py  apply_frontend_telemetry_generation_v3.py  apply_residual_alpha_gate_patch.py  apply_residual_context_patch.py  apply_residual_cost2x_patch.py  apply_residual_serving_patch.py  backtest.py  capture_stateful_execution_baseline.py  check_coingecko.py  check_pg.py  collect_hl_snapshots.py  diagnose_flat_collapse.py  evaluate.py  fetch_binance.py  fetch_binance_vision_only.py  fetch_futures.py  fetch_hl_derivatives.py  fetch_hyperliquid.py  fetch_orderflow_only.py  fix_complete_architecture_hardening_types.py  freeze_phase1b.py  gate1_diagnostic.py  generate_sample_data.py  manage_registry.py  p0_fix_staleness.patch  p0_metadata_promotion.patch  p0_minimal_multiseed.py  p0_observation_parity.patch  p0_phase1b_diagnostic.py  p0_phase1b_summarize_confirmation.py  p0_phase1b_threshold_sweep.py  p0_phase2a_ablation.py  p0_phase2a_scenarios.py  prepare_complete_architecture_hardening_tests.py  (+14 more)
studio/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
tests/: __init__.py  binance_signed_helpers.py  test_adversarial_m4.py  test_adversarial_m5.py  test_architecture_contract.py  test_baseline_annualization.py  test_baseline_rebalance_phase.py  test_baseline_residual.py  test_baseline_residual_env.py  test_binance_vision.py  test_bitget_source.py  test_blended_book.py  test_bootstrap_eval.py  test_carry.py  test_combine_weight_fns.py  test_confidence_gate.py  test_config.py  test_contextual_evaluation.py  test_critical_architecture_remediation.py  test_critical_coverage_config.py  test_crowding.py  test_current_documentation_contract.py  test_deployment_activation.py  test_deployment_gate.py  test_deployment_gate_adversarial.py  test_detection.py  test_documentation_contract.py  test_dp_oracle_teacher.py  test_drift_monitor.py  test_evolution.py  test_execution.py  test_feature_norm.py  test_feature_pipeline.py  test_feature_provider.py  test_gbm_forecaster.py  test_guardrails.py  test_guardrails_cli.py  test_horizon_scan.py  (+84 more)
(+1418 files in other folders)
