[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mars_lite"
version = "0.1.0"
description = "ポートフォリオ配分RLエージェント（Trade RL / mars_lite）"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "gymnasium>=0.29.0",
    "stable-baselines3==2.3.2",
    "torch==2.3.1",
    "matplotlib>=3.7.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mars_lite*"]
