[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-rl"
version = "0.3.0"
description = "Baseline-anchored residual reinforcement learning for portfolio research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "gymnasium==0.29.1",
    "stable-baselines3==2.3.2",
    "sb3-contrib==2.3.0",
    "torch==2.3.1",
    "packaging<24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.0",
    "mypy>=1.14.0",
    "hypothesis>=6.120.0",
    "import-linter>=2.1",
    "vulture>=2.14",
]
export = [
    "onnx==1.16.2",
    "onnxruntime==1.18.1",
]

[project.scripts]
trade-rl = "trade_rl.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trade_rl*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["trade_rl", "tests"]

[tool.mypy]
python_version = "3.12"
files = ["trade_rl"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "gymnasium.*",
    "stable_baselines3.*",
    "sb3_contrib.*",
    "onnx.*",
    "onnxruntime.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
source = ["trade_rl"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
