[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-rl"
version = "0.3.0"
description = "Baseline-anchored residual reinforcement learning for portfolio research"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "gymnasium==0.29.1",
    "packaging<24.0",
    "cryptography==49.0.0",
]

[project.optional-dependencies]
studio = [
    "fastapi>=0.128,<0.140",
    "uvicorn>=0.48,<0.52",
]
train-sb3 = [
    "stable-baselines3==2.3.2",
    "sb3-contrib==2.3.0",
    "torch==2.3.1",
]
postgres = [
    "psycopg[binary]>=3.2,<4",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.0",
    "mypy>=1.14.0",
    "hypothesis>=6.120.0",
    "import-linter>=2.1",
    "vulture>=2.14",
    "PyYAML==6.0.3",
    "httpx>=0.28,<0.29",
]
export = [
    "onnx==1.16.2",
    "onnxruntime==1.18.1",
]

[project.scripts]
trade-rl = "trade_rl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trade_rl*"]

[tool.setuptools.package-data]
"trade_rl.catalog.sql" = ["*.sql"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["trade_rl", "tests"]

[tool.mypy]
python_version = "3.12"
files = ["trade_rl"]
exclude = [
    "^tests/",
    "^examples/",
    "^studio/",
]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "gymnasium.*",
    "stable_baselines3.*",
    "sb3_contrib.*",
    "onnx.*",
    "onnxruntime.*",
    "torch.*",
    "psycopg.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
markers = [
    "postgres: requires a live PostgreSQL test database",
]

[tool.coverage.run]
source = ["trade_rl"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
# These two clauses belong to the pre-stateful implementation hidden behind the
# maintained StatefulCompatibilityMarketExecutor facade. They remain temporarily
# for source-compatible subclassing, but are unreachable through the public API.
exclude_also = [
    '^def _target_weights\(',
    '(?s:^    def execute_interval\(\n        self,\n        book: BookState,\n        target: np.ndarray,\n        \*,\n        start_index: int,\n        bars: int,\n    \) -> ExecutionResult:)',
]

[tool.trade_rl.critical_coverage]
metric = "branch"
target = 90.0

[tool.trade_rl.critical_coverage.files]
"trade_rl/simulation/accounting.py" = 93.0
"trade_rl/simulation/execution.py" = 90.0
"trade_rl/risk/pretrade.py" = 90.0
"trade_rl/rl/rewards.py" = 97.0
"trade_rl/evaluation/gates.py" = 100.0
"trade_rl/telemetry/indexed_training.py" = 69.0
"trade_rl/rl/training_telemetry.py" = 78.5

[tool.trade_rl.critical_coverage.groups.artifacts]
minimum = 90.0
paths = [
    "trade_rl/artifacts/codec.py",
    "trade_rl/artifacts/run_manifest.py",
    "trade_rl/artifacts/signals.py",
    "trade_rl/artifacts/store.py",
]

[tool.trade_rl.critical_coverage.groups.serving]
minimum = 90.0
paths = [
    "trade_rl/serving/bundle.py",
    "trade_rl/serving/registry.py",
    "trade_rl/serving/runtime.py",
]

[tool.trade_rl.critical_coverage.groups.environment_runtime]
minimum = 64.0
paths = [
    "trade_rl/rl/environment_episode.py",
    "trade_rl/rl/environment_execution.py",
    "trade_rl/rl/environment_observation.py",
    "trade_rl/rl/environment_transition.py",
]

[tool.trade_rl.critical_coverage.groups.environment_step_services]
minimum = 86.8
paths = [
    "trade_rl/rl/environment_decision.py",
    "trade_rl/rl/environment_risk.py",
    "trade_rl/rl/environment_reward.py",
    "trade_rl/rl/environment_info.py",
]

[tool.trade_rl.critical_coverage.groups.stateful_execution_services]
minimum = 93.0
paths = [
    "trade_rl/simulation/stateful_runtime.py",
    "trade_rl/simulation/stateful_bar_lifecycle.py",
    "trade_rl/simulation/stateful_order_transitions.py",
    "trade_rl/simulation/stateful_symbol_fills.py",
]
